--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </main>
 
     <footer class="rodape">
-        <p>Desenvolvido por Charles Miranda</p>
+        <p>Desenvolvido por Charles Miranda!</p>
     </footer>
     
 </body>
