--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     Whatsaap</a>
 
                     <a class="apresentacao__links__link" href="https://github.com/charles-tech">
-                        <img class="icones" src="assets/whatsapp.png" alt="">
+                        <img class="icones" src="assets/github.png" alt="">
                         GitHub</a>
             </div>
         </section>
