--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
     <main class="apresentacao">
 
         <section class="apresentacao__conteudo">
+        
             <h1 class="apresentacao__conteudo__titulo"> Projetos Web  para <strong class="titulo_destaque"> melhor apresentar o seu negócio. </strong></h1>
+            <div class="texto-midia">
             <p class="apresentacao__conteudo__texto">Olá! Sou Charles Miranda, tenho 15 anos de expêriencia em gestão administrativa. </p>
             <p class="apresentacao__conteudo__texto">Desenvoledor Front-end com especialidade em React, Html, Css e Java Script. </p>
-                
+         </div>
                 <h2 class="apresentacao__links_subtitulos">Acesse minhas redes:</h2> 
 
 
